# wlang

./: .gitignore  Assert.hpp  Ast.cpp  Ast.hpp  AstChunk.hpp  BuiltinTypes.cpp  BuiltinTypes.hpp  CMakeLists.txt  CreateTaggedUnion.hpp  HashMap.hpp  MergedAst.cpp  MergedAst.hpp  Parser.cpp  Parser.hpp  ParserRules.inl  ParserRulesDeclarations.inl  PlainCGenerator.cpp  PlainCGenerator.hpp  SemanticAnalyser.cpp  SemanticAnalyser.hpp  StringUtil.cpp  StringUtil.hpp  Tokeniser.cpp  Tokeniser.hpp  first_follow.txt  grammar.py  main.cpp
GrammarTool/: CMakeLists.txt  Grammar.cpp  Grammar.hpp  GrammarToolMain.cpp  ParserGenerator.cpp  ParserGenerator.hpp  TestGrammar.cpp
src/: .gitignore  Ast.cpp  Ast.hpp  AstChunk.hpp  BuiltinTypes.cpp  BuiltinTypes.hpp  CCompiler.hpp  CCompilerClang.cpp  CCompilerClang.hpp  CCompilerMSVC.cpp  CCompilerMSVC.hpp  CMakeLists.txt  ClassDefaultsGenerator.cpp  ClassDefaultsGenerator.hpp  CreateTaggedUnion.hpp  GenerationPtr.cpp  GenerationPtr.hpp  HashMap.hpp  MergedAst.cpp  MergedAst.hpp  OutputString.cpp  OutputString.hpp  Parser.cpp  Parser.hpp  PlainCGenerator.cpp  PlainCGenerator.hpp  Process.cpp  Process.hpp  SemanticAnalyser.cpp  SemanticAnalyser.hpp  StringUtil.hpp  Tokeniser.cpp  Tokeniser.hpp  UnixWrap.cpp  UnixWrap.hpp  WLangMain.cpp  main.cpp
src/Common/: Assert.hpp  Filesystem.cpp  Filesystem.hpp  StringUtil.cpp  StringUtil.hpp
src/GrammarTool/: CMakeLists.txt  Grammar.cpp  Grammar.hpp  GrammarToolMain.cpp  ParserGenerator.cpp  TestGrammar.cpp
stdlib/: string.w  sys.w
tests/basic/src/: main.w  other.w
